tests/invalid/trait/method_call_short_ufcs_local_annotated_safety_gate.facet
trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x: unrestricted isize = 1;
  (Runner::run x)
}
